# hot-lib-reloader-nested-crates

./: .gitignore  Cargo.toml  README.md
components/: Cargo.toml
main/: Cargo.toml
main/src/: main.rs
main/src/components/: Cargo.toml
main/src/components/src/: lib.rs
main/src/systems/: Cargo.toml
main/src/systems/src/: lib.rs
src/: main.rs
systems/: Cargo.toml
systems/src/: lib.rs
