[package]
name = "bin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = { version = "0.14.1" }
components = { path = "src/components" }
systems = { path = "src/systems" }
hot-lib-reloader = { version = "0.7.0", optional = true }
rand = "0.8.5"

[features]
default = []
reload = [
  "dep:hot-lib-reloader",
  # Make sure that the types don't change:
  # This is important on windows for avoiding file locking issues:
]
